--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html {
+    overflow-y: scroll; /* Selalu tampilkan scrollbar di sisi vertikal */
+  }
