--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,10 @@
 html {
     overflow-y: scroll; /* Selalu tampilkan scrollbar di sisi vertikal */
   }
+body {
+    background-image: url('/bghadits.png');
+    background-size: contain, cover;
+    background-repeat: repeat-x, no-repeat;
+    background-position: center;
+    min-height: 100vh;
+}
